# Live4Life

./: .gitattributes  .gitmodules  LICENCE.md  README.md  demo.php  image-switcher.js.html  image-switcher.min.js.html  index.md  sc_highlighting.css  sc_highlighting.php
.github/: FUNDING.yml
4Live4Life_Extensions/: APCmini2.sc  InstrumentExpansion.sc  ServerMeter3.sc
4Live4Life_Project/: MyPresetFile.txt  Nested_Comments_Formatting.scd  _0_Init_Live4Life.sc  _0_Init_Live4Life.scd  _0_Init_Live4Life.sce.scd  _0_Init_Live4Life1.scd  _0_Init_Live4Life2.scd  _1_Init_BuffersSynths_127.scd  _1_Init_BuffersSynths_128.scd  _1_Init_BuffersSynths_129.scd  _1_Init_BuffersSynths_130.scd  _2_Init_GUI_220.scd  _2_Init_GUI_221.scd  _3 Init Pattern 181.scd  _Init Lemur5.scd  _Init Midi Ak.scd  _Init Midi Morph.scd  _Init Midi Q2.scd  _Init Midi T.scd  _Init Midi Twister7.scd  _Init Midi U.scd  _code Live for Life GUI actions.html  _code Live for Life MasterEQ Load.html  _code Live for Life Voices Trigger.html
Controllers/: LFL53.jzml  LFL55.jzml
L4L_Extensions/: ChangeBus.sc  ServerMeter2.sc  ServerMeterCL.sc  WFSPathGUI2.sc
L4L_ExtensionsLang/: BufferF-updateInfoChannel.sc  EZSliderRounding.sc  WFSPathGUI2.sc  plusServer2.sc
ToIncludeInExtensions/NickCollins_SCMIR/Source/: CMakeLists.txt
ToIncludeInExtensions/NickCollins_SCMIR/Source/NeuralNet/: ffnet.cpp  main.cpp
ToIncludeInExtensions/NickCollins_SCMIR/Source/gmm/: Macros.cpp  Macros.h  MathLib.h  Matrix.h  Vector.h  gmr.cpp  main.cpp
ToIncludeInExtensions/NickCollins_SCMIR/Source/hmm/: main.cpp
(+17571 files in other folders)
